# soup-dumpling

./: .gitignore  LICENSE  Pipfile  README.md  alembic.ini  botfather.txt  classes.py  create.sql  database.py  handlers.py  help.txt  install.sh  main.py  pyproject.toml  pytest.ini  quote.py  requirements.txt  setup.py  soup-dumpling.py  supervisor.conf
alembic/: env.py
alembic/versions/: 119a5dc_photo_message.py  3083180_initial.py
handlers/: __init__.py  direct.py  group.py  meta.py  quotes.py  stats.py  vote.py
migrations/: 000_quote_content_html.sql  001_create_tables.sql  001_quote_is_forward.sql  005_create_quote_message.sql  006_create_vote.sql  007_quote_score.py  007_quote_score.sql
soup/: __version__.py  classes.py  core.py  database.py  help.txt  main.py  utils.py
soup/handlers/: __init__.py  direct.py  group.py  meta.py  quotes.py  search_tags.py  stats.py
tests/: test_database.py
