[tool.poetry]
name = "soup-dumpling"
version = "3.0.0"
description = ""
authors = ["Doktor <doktorthehusky@gmail.com>"]
packages = [
    { include = "soup" },
]

[tool.poetry.dependencies]
python = "^3.6"
python-telegram-bot = "=8.0"
SQLAlchemy = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
factory-boy = "^2.11"

[tool.poetry.scripts]
soup = 'soup.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
